--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/metalroofingdenverco-10-22/">https://rank-fortress-digital-agency.github.io/metalroofingdenverco-10-22/</a><br>
+                <a target="_bLank" href="http://metalroofingdenverco-10-22.s3-website-us-east-1.amazonaws.com">http://metalroofingdenverco-10-22.s3-website-us-east-1.amazonaws.com</a><br>
+                <a target="_bLank" href="https://lively-concha-57ce09.netlify.app/">https://lively-concha-57ce09.netlify.app/</a><br>
             </section>
 
         </div>
